src/main/antlr/grammar/ChemicalChunkerParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g 2009-11-19 00:34:06

    package uk.ac.cam.ch.wwmm.extractPhrases;
    import java.util.HashMap;
    import nu.xom.Attribute;
    import nu.xom.Element;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
public class ChemicalChunkerParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "WS", "NEWLINE", "ACHAR", "DIGIT", "TOKEN", "'DT'", "'VBD'", "'CC'", "'TO'", "'NN'", "'PPN'", "'VB'", "'OSCAR-CD'", "'OSCAR-CJ'", "'TM-UNICODE'", "'CD-UNICODE'", "'IN-AS'", "'IN-BEFORE'", "'IN-AFTER'", "'IN-IN'", "'IN-INTO'", "'IN-WITH'", "'IN-WITHOUT'", "'IN-BY'", "'IN-VIA'", "'IN-OF'", "'IN-ON'", "'IN-FOR'", "'IN-FROM'", "'IN-UNDER'", "'IN-OVER'", "'IN-OFF'", "'NN-STATE'", "'NN-TIME'", "'CD'", "'NN-GRAM'", "'NN-MOL'", "'NN-ATMOSPHERE'", "'NN-EQ'", "'NN-VOL'", "'NN-TEMP'", "'NN-FLASH'", "'NN-GENERAL'", "'NN-METHOD'", "'NN-AMOUNT'", "'NN-PRESSURE'", "'NN-COLUMN'", "'NN-CHROMATOGRAPHY'", "'NN-VACUUM'", "'NN-CYCLE'", "'NN-TIMES'", "'NN-CHEMENTITY'", "'CM'", "'VB-USE'", "'VB-CHANGE'", "'VB-SUBMERGE'", "'VB-SUBJECT'", "'JJ'", "'NN-ADD'", "'NN-MIXTURE'", "'VB-ADD'", "'VB-CHARGE'", "'VB-CONTAIN'", "'VB-DROP'", "'VB-FILL'", "'VB-SUSPEND'", "'VB-TREAT'", "'VB-APPARATUS'", "'NN-APPARATUS'", "'VB-CONCENTRATE'", "'NN-CONCENTRATE'", "'VB-COOL'", "'VB-DEGASS'", "'VB-DISSOLVE'", "'VB-DRY'", "'NN-DRY'", "'VB-EXTRACT'", "'NN-EXTRACT'", "'VB-FILTER'", "'NN-FILTER'", "'VB-HEAT'", "'VB-INCREASE'", "'VB-PARTITION'", "'VB-PRECIPITATE'", "'NN-PRECIPITATE'", "'VB-PURIFY'", "'NN-PURIFY'", "'VB-QUENCH'", "'VB-RECOVER'", "'VB-REMOVE'", "'NN-REMOVE'", "'VB-STIR'", "'VB-SYNTHESIZE'", "'NN-SYNTHESIZE'", "'VB-WAIT'", "'VB-WASH'", "'VB-YIELD'", "'RB'", "'COLON'", "'COMMA'", "'APOST'", "'NEG'", "'DASH'", "'STOP'", "'NN-PERCENT'", "'LSQB'", "'RSQB'", "'-LRB-'", "'-RRB-'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int EOF=-1;
    public static final int T__9=9;
    public static final int TOKEN=8;
    public static final int T__93=93;
    public static final int T__19=19;
    public static final int T__94=94;
    public static final int T__91=91;
    public static final int T__92=92;
    public static final int T__16=16;
    public static final int T__15=15;
    public static final int T__90=90;
    public static final int T__18=18;
    public static final int T__17=17;
    public static final int T__12=12;
    public static final int T__11=11;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int T__10=10;
    public static final int T__99=99;
    public static final int T__98=98;
    public static final int T__97=97;
    public static final int T__96=96;
    public static final int T__95=95;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int T__85=85;
    public static final int T__84=84;
    public static final int T__87=87;
    public static final int T__86=86;
    public static final int T__89=89;
    public static final int T__88=88;
    public static final int WS=4;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__70=70;
    public static final int T__76=76;
    public static final int T__75=75;
    public static final int T__74=74;
    public static final int T__73=73;
    public static final int T__79=79;
    public static final int T__78=78;
    public static final int T__77=77;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__61=61;
    public static final int T__60=60;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__107=107;
    public static final int T__108=108;
    public static final int T__109=109;
    public static final int T__103=103;
    public static final int T__59=59;
    public static final int T__104=104;
    public static final int T__105=105;
    public static final int T__106=106;
    public static final int T__111=111;
    public static final int T__110=110;
    public static final int T__112=112;
    public static final int DIGIT=7;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__102=102;
    public static final int T__101=101;
    public static final int T__100=100;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int ACHAR=6;
    public static final int T__34=34;
    public static final int NEWLINE=5;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "vbpurify", "vbfilter", "vbdissolve", "totok", "vbdry", 
        "vbheat", "nnchementity", "vbcharge", "ppntok", "inunder", "nounphrase", 
        "inby", "vbdegass", "nnconcentrate", "nntime", "nnadd", "verbphraseADD", 
        "inafter", "apost", "nnpressure", "gram", "document", "nnmethod", 
        "vbsubmerge", "infrom", "nnremove", "comma", "vbapparatus", "dash", 
        "vbwait", "nnchromatography", "rb", "nnvol", "molecules", "nnamount", 
        "vbuse", "vbrecover", "oscarcm", "rsqb", "inof", "nndry", "oscarcd", 
        "amount", "nnapparatus", "stop", "vbsuspend", "inwith", "prepphrase", 
        "vbconcentrate", "molecule", "vbquench", "vbfill", "to", "vbcontain", 
        "colon", "nnmol", "nnmixture", "inin", "vbd", "jj", "dttok", "nnstate", 
        "vbadd", "inbefore", "infor", "nncolumn", "vbextract", "nnvacuum", 
        "inon", "inover", "lrb", "inwithout", "nntemp", "lsqb", "cdunicode", 
        "vbyield", "vbtok", "vbstir", "neg", "nntimes", "vbtreat", "nnfilter", 
        "nnprecipitate", "inoff", "inas", "oscarcj", "vbdrop", "vbcool", 
        "invia", "vbchange", "nneq", "vbsubject", "nnextract", "vbwash", 
        "nnpercent", "tmunicode", "nnatmosphere", "cc", "nnpurify", "sentence", 
        "nncycle", "cd", "nnflash", "vbincrease", "rrb", "nnsynthesize", 
        "vbprecipitate", "vbremove", "ininto", "vbsynthesize", "vbpartition", 
        "nngeneral", "nntok", "nngram", "mol"
    };
     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public ChemicalChunkerParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public ChemicalChunkerParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this, port, null);
            setDebugListener(proxy);
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
        }
    public ChemicalChunkerParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg, new RecognizerSharedState());

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }


    public String[] getTokenNames() { return ChemicalChunkerParser.tokenNames; }
    public String getGrammarFileName() { return "/home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g"; }


      HashMap<String, Object> objectMap = new HashMap<String, Object>();
        Element rootElement = new Element("root");
        Element tableElement;
        Element cellElement;
        Element arrayElement;
        Element nounElement;
        Element currentElement;
        Element phraseElement;
        Element dtElement;
        Element nnElement;
        String tag;

        private Element addToken(String token) {
            return addElement(tag, token);
        }	
        private Element addElement(String name, String content) {
            ensureCurrentElement();
    	System.out.println("add "+name+"/"+content);
            Element newElement = addElement(name);
            newElement.appendChild(content);
            return newElement;
        }
        private Element addElement(String name) {
    	Element newElement = new Element(name);
            currentElement.appendChild(newElement);
            return newElement;
        }
        private void ensureCurrentElement() {
            rootElement = new Element("root");
            currentElement = rootElement;
        }



    // $ANTLR start "document"
    // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:56:1: document : ( sentence )+ ;
    public final void document() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "document");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(56, 1);

        try {
            // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:56:9: ( ( sentence )+ )
            dbg.enterAlt(1);

            // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:56:11: ( sentence )+
            {
            dbg.location(56,11);
            // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:56:11: ( sentence )+
            int cnt1=0;
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==9||LA1_0==56) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:56:11: sentence
            	    {
            	    dbg.location(56,11);
            	    pushFollow(FOLLOW_sentence_in_document116);
            	    sentence();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        dbg.recognitionException(eee);

                        throw eee;
                }
                cnt1++;
            } while (true);
            } finally {dbg.exitSubRule(1);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(56, 20);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "document");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "document"


    // $ANTLR start "mol"
    // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:58:1: mol : cd nnmol ;
    public final void mol() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "mol");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(58, 1);

        try {
            // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:58:5: ( cd nnmol )
            dbg.enterAlt(1);

            // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:58:7: cd nnmol
            {
            dbg.location(58,7);
            pushFollow(FOLLOW_cd_in_mol125);
            cd();

            state._fsp--;

            dbg.location(58,10);
            pushFollow(FOLLOW_nnmol_in_mol127);
            nnmol();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(58, 15);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "mol");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "mol"


    // $ANTLR start "sentence"
    // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:59:1: sentence : nounphrase verbphraseADD prepphrase ;
    public final void sentence() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "sentence");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(59, 1);

        try {
            // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:60:2: ( nounphrase verbphraseADD prepphrase )
            dbg.enterAlt(1);

            // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:60:5: nounphrase verbphraseADD prepphrase
            {
            dbg.location(60,5);
            pushFollow(FOLLOW_nounphrase_in_sentence137);
            nounphrase();

            state._fsp--;

            dbg.location(60,16);
            pushFollow(FOLLOW_verbphraseADD_in_sentence139);
            verbphraseADD();

            state._fsp--;

            dbg.location(60,30);
            pushFollow(FOLLOW_prepphrase_in_sentence141);
            prepphrase();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(60, 40);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "sentence");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "sentence"


    // $ANTLR start "nounphrase"
    // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:62:1: nounphrase : molecules ;
    public final void nounphrase() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "nounphrase");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(62, 1);

        try {
            // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:63:2: ( molecules )
            dbg.enterAlt(1);

            // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:63:3: molecules
            {
            dbg.location(63,3);
            pushFollow(FOLLOW_molecules_in_nounphrase150);
            molecules();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(63, 13);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "nounphrase");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "nounphrase"


    // $ANTLR start "verbphraseADD"
    // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:64:1: verbphraseADD : ( vbd )* vbadd ;
    public final void verbphraseADD() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "verbphraseADD");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(64, 1);

        try {
            // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:65:2: ( ( vbd )* vbadd )
            dbg.enterAlt(1);

            // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:65:4: ( vbd )* vbadd
            {
            dbg.location(65,4);
            // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:65:4: ( vbd )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2);

                int LA2_0 = input.LA(1);

                if ( (LA2_0==10) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:65:4: vbd
            	    {
            	    dbg.location(65,4);
            	    pushFollow(FOLLOW_vbd_in_verbphraseADD163);
            	    vbd();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);
            } finally {dbg.exitSubRule(2);}

            dbg.location(65,9);
            pushFollow(FOLLOW_vbadd_in_verbphraseADD166);
            vbadd();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(65, 14);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "verbphraseADD");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "verbphraseADD"


    // $ANTLR start "prepphrase"
    // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:68:1: prepphrase : totok ( molecule | nounphrase ) ;
    public final void prepphrase() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "prepphrase");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(68, 1);

        try {
            // /home/lezan/NetBeansProjects/chemicaltagger/src/main/antlr/grammar/ChemicalChunker.g:69:2: ( totok ( molecule | nounphrase ) )
            dbg.enterAlt(1);
